cmake_minimum_required(VERSION 3.6)
project(s3fnet)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/dmlprep/dmlenv.cc
    src/dmlprep/dmlpart.cc
    src/env/namesvc.cc
    src/env/namesvc.h
    src/extra/getopt.c
    src/extra/getopt.h
    src/extra/getopt1.c
    src/net/route_caches/route_cache0.cc
    src/net/route_caches/route_cache0.h
    src/net/route_caches/route_cache1.cc
    src/net/route_caches/route_cache1.h
    src/net/route_caches/route_cache2.cc
    src/net/route_caches/route_cache2.h
    src/net/cidr.cc
    src/net/cidr.h
    src/net/dmlobj.cc
    src/net/dmlobj.h
    src/net/droptail_queue.cc
    src/net/droptail_queue.h
    src/net/forwardingtable.cc
    src/net/forwardingtable.h
    src/net/host.cc
    src/net/host.h
    src/net/ip_prefix.cc
    src/net/ip_prefix.h
    src/net/link.cc
    src/net/link.h
    src/net/mac48_address.cc
    src/net/mac48_address.h
    src/net/net.cc
    src/net/net.h
    src/net/network_interface.cc
    src/net/network_interface.h
    src/net/nhi.cc
    src/net/nhi.h
    src/net/nic_queue.cc
    src/net/nic_queue.h
    src/net/red_queue.cc
    src/net/red_queue.h
    src/net/traffic.cc
    src/net/traffic.h
    src/os/base/data_message.cc
    src/os/base/data_message.h
    src/os/base/lowest_protocol_session.cc
    src/os/base/lowest_protocol_session.h
    src/os/base/nic_protocol_session.cc
    src/os/base/nic_protocol_session.h
    src/os/base/protocol_graph.cc
    src/os/base/protocol_graph.h
    src/os/base/protocol_message.cc
    src/os/base/protocol_message.h
    src/os/base/protocol_session.cc
    src/os/base/protocol_session.h
    src/os/base/protocols.cc
    src/os/base/protocols.h
    src/os/dummy/dummy_message.cc
    src/os/dummy/dummy_message.h
    src/os/dummy/dummy_session.cc
    src/os/dummy/dummy_session.h
    src/os/ipv4/ip_interface.h
    src/os/ipv4/ip_message.cc
    src/os/ipv4/ip_message.h
    src/os/ipv4/ip_session.cc
    src/os/ipv4/ip_session.h
    src/os/simple_mac/simple_mac.cc
    src/os/simple_mac/simple_mac.h
    src/os/simple_mac/simple_mac_message.cc
    src/os/simple_mac/simple_mac_message.h
    src/os/simple_phy/simple_phy.cc
    src/os/simple_phy/simple_phy.h
    src/os/socket/nb_socket_master.cc
    src/os/socket/nb_socket_master.h
    src/os/socket/socket_master.cc
    src/os/socket/socket_master.h
    src/os/socket/socket_session.h
    src/os/tcp/app/blocking_tcp_client.cc
    src/os/tcp/app/blocking_tcp_client.h
    src/os/tcp/app/dnp_client.cc
    src/os/tcp/app/dnp_server.cc
    src/os/tcp/app/nb_tcp_client.cc
    src/os/tcp/app/nb_tcp_client.h
    src/os/tcp/app/nb_tcp_server.cc
    src/os/tcp/app/nb_tcp_server.h
    src/os/tcp/app/OLD_tcp_client.cc
    src/os/tcp/app/OLD_tcp_server.cc
    src/os/tcp/app/tcp_client.cc
    src/os/tcp/app/tcp_client.h
    src/os/tcp/app/tcp_server.cc
    src/os/tcp/app/tcp_server.h
    src/os/tcp/tcp_blocks.cc
    src/os/tcp/tcp_blocks.h
    src/os/tcp/tcp_init.h
    src/os/tcp/tcp_master.cc
    src/os/tcp/tcp_master.h
    src/os/tcp/tcp_message.cc
    src/os/tcp/tcp_message.h
    src/os/tcp/tcp_rcvwnd.cc
    src/os/tcp/tcp_rcvwnd.h
    src/os/tcp/tcp_receiver.cc
    src/os/tcp/tcp_sack.cc
    src/os/tcp/tcp_sender.cc
    src/os/tcp/tcp_seqwnd.h
    src/os/tcp/tcp_session.cc
    src/os/tcp/tcp_session.h
    src/os/tcp/tcp_sndwnd.cc
    src/os/tcp/tcp_sndwnd.h
    src/os/tcp/tcp_state.cc
    src/os/tcp/tcp_timer.cc
    src/os/udp/app/udp_client.cc
    src/os/udp/app/udp_client.h
    src/os/udp/app/udp_server.cc
    src/os/udp/app/udp_server.h
    src/os/udp/udp_master.cc
    src/os/udp/udp_master.h
    src/os/udp/udp_message.cc
    src/os/udp/udp_message.h
    src/os/udp/udp_session.cc
    src/os/udp/udp_session.h
    src/util/tries/trie0.cc
    src/util/tries/trie0.h
    src/util/tries/trie1.cc
    src/util/tries/trie1.h
    src/util/tries/trie2.cc
    src/util/tries/trie2.h
    src/util/tries/trie3.cc
    src/util/tries/trie3.h
    src/util/tries/trie4.cc
    src/util/tries/trie4.h
    src/util/tries/triedata_array0.cc
    src/util/tries/triedata_array0.h
    src/util/tries/triedata_array1.cc
    src/util/tries/triedata_array1.h
    src/util/tries/triedata_array2.cc
    src/util/tries/triedata_array2.h
    src/util/errhandle.cc
    src/util/errhandle.h
    src/util/shstl.h
    src/util/trie.cc
    src/util/trie.h
    src/s3fnet.cc
    src/s3fnet.h)

add_executable(s3fnet ${SOURCE_FILES})